--- a/Projects/style.css
+++ b/Projects/style.css
@@ -1,3 +1,8 @@
+html{
+        cursor: url('https://www.rw-designer.com/cursor-view/170516.png'), auto;
+
+}
+
 body {
     background-image: url(download.jfif);
     background-repeat: no-repeat;
